--- a/Source/Android/app/src/main/res/values/strings.xml
+++ b/Source/Android/app/src/main/res/values/strings.xml
@@ -24,19 +24,19 @@
 
     <!-- WARNING Do not move these controller entries AT ALL COSTS! They are indexed with ints, and an assumption
             is made that they are placed together so that we can access them sequentially in a loop. -->
-    <string name="wiimote_0">Wiimote 1</string>
-    <string name="wiimote_1">Wiimote 2</string>
-    <string name="wiimote_2">Wiimote 3</string>
-    <string name="wiimote_3">Wiimote 4</string>
+    <string name="wiimote_0">Wii Remote 1</string>
+    <string name="wiimote_1">Wii Remote 2</string>
+    <string name="wiimote_2">Wii Remote 3</string>
+    <string name="wiimote_3">Wii Remote 4</string>
     <!-- END WARNING -->
 
-    <string name="enable_wiimote">Enable Wiimote</string>
+    <string name="enable_wiimote">Enable Wii Remote</string>
     <string name="wiimote_ir">IR Motion Controls</string>
     <string name="wiimote_swing">Swing Navigation</string>
     <string name="wiimote_tilt">Tilt Navigation</string>
     <string name="wiimote_shake">Shake Controls</string>
     <string name="wiimote_stick">Analog Stick Navigation</string>
-    <string name="wiimote_extensions">Wiimote Extension</string>
+    <string name="wiimote_extensions">Wii Remote Extension</string>
     <string name="wiimote_extensions_descrip">Choose which Extension you want to use with the Wiimote</string>
     <string name="show_nunchuk">Nunchuk</string>
     <string name="show_classic">Classic Controller</string>
@@ -46,7 +46,7 @@
     <string name="input_binding">Input Binding</string>
     <string name="input_binding_descrip">Press or move an input to bind it to %1$s.</string>
 
-    <!-- GameCube buttons (May be shared with Wiimote stuff too) -->
+    <!-- GameCube buttons (May be shared with Wii Remote stuff too) -->
     <string name="button_a">Button A</string>
     <string name="button_b">Button B</string>
     <string name="button_start">Button Start</string>
@@ -68,7 +68,7 @@
     <string name="trigger_left">Trigger L</string>
     <string name="trigger_right">Trigger R</string>
 
-    <!-- Wiimote (+ extension) only buttons -->
+    <!-- Wii Remote (+ extension) only buttons -->
     <string name="button_one">Button 1</string>
     <string name="button_two">Button 2</string>
     <string name="button_plus">Button +</string>
@@ -167,9 +167,9 @@
     <string name="overclock_enable_description">Higher values can make variable-framerate games run at a higher framerate, requiring a powerful device. Lower values make games run at a lower framerate, increasing emulation speed, but reducing the emulated console\'s performance.</string>
     <string name="overclock_title">Emulated CPU Clock Speed</string>
     <string name="overclock_warning">WARNING: Changing this from the default (100%) WILL break games and cause glitches. Please do not report bugs that occur with a non-default clock.</string>
-    <string name="wiimote_scanning">Wiimote Continuous Scanning</string>
+    <string name="wiimote_scanning">Wii Remote Continuous Scanning</string>
     <string name="wiimote_scanning_description">Leave this on if you are using a DolphinBar for real Wiimote support.</string>
-    <string name="wiimote_speaker">Wiimote Speaker</string>
+    <string name="wiimote_speaker">Wii Remote Speaker</string>
     <string name="wiimote_speaker_description">Enable sound output through the speaker on a real Wiimote (DolphinBar required).</string>
 
 
@@ -265,7 +265,7 @@
     <string name="emulation_slot6">Slot 6</string>
     <string name="emulation_quicksave">Quick Save</string>
     <string name="emulation_quickload">Quick Load</string>
-    <string name="emulation_refresh_wiimotes">Refresh Wiimotes</string>
+    <string name="emulation_refresh_wiimotes">Refresh Wii Remotes</string>
     <string name="emulation_configure_controls">Configure Controls</string>
     <string name="emulation_edit_layout">Edit Layout</string>
     <string name="emulation_done">Done</string>
@@ -281,7 +281,7 @@
     <string name="gc_adapter_bongos">Bongo Controller</string>
     <string name="gc_adapter_bongos_description">Enable this if you are using bongos on this port.</string>
 
-    <!-- Wiimote Input Menu-->
+    <!-- Wii Remote Input Menu-->
     <string name="header_wiimote_general">General</string>
     <string name="header_controllers">Controllers</string>
 
